[CF] add personal seat booking. Add caching. Refactoring

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+  cache:
+    cache-names: "getActiveRidesByParams"
+    caffeine:
+      spec: maximumSize=2000,expireAfterWrite=600s
